src/validation/tests/snapshots/rusty__validation__tests__recursive_validation_tests__arrays__one_cycle_bcb.snap
---
source: src/validation/tests/recursive_validation_tests.rs
expression: "&diagnostics"
---
error[E029]: Recursive data structure `B -> C -> B` has infinite size
   ┌─ <internal>:6:18
   │
 6 │             TYPE B : STRUCT
   │                  ^
   │                  │
   │                  Recursive data structure `B -> C -> B` has infinite size
   │                  see also
   ·
10 │             TYPE C : STRUCT
   │                  - see also
